# gold-miner-for-ROS2-assessment

./: LICENCE  README.md
mine_publisher/: CMakeLists.txt  package.xml
mine_publisher/config/: mine_publisher.yaml
mine_publisher/include/mine_publisher/: mine_publisher_node.hpp
mine_publisher/launch/: mine_publisher.launch.py
mine_publisher/src/: mine_publisher_node.cpp
mine_publisher/test/: CMakeLists.txt
mine_service/: CMakeLists.txt  package.xml
mine_service/include/mine_service/: mine_service_node.hpp
mine_service/src/: mine_service_node.cpp
mine_service/test/: CMakeLists.txt  test_mine_service.cpp
miner_client/: CMakeLists.txt  package.xml
miner_client/include/miner_client/: miner_client_node.hpp
miner_client/launch/: miner_client.launch.py
miner_client/src/: miner_client_node.cpp
miner_interfaces/: CMakeLists.txt  package.xml
miner_interfaces/msg/: Ore.msg  Ores.msg
miner_interfaces/srv/: MineMap.srv
